added stylesheet link and some paragraphs and divs

--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
 		<title>Einstein Express</title>
 	</head>
 	<body>
+		<div class="row">
+			<div class = "span4">
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin tortor velit, ut egestas nisl. Aenean gravida bibendum erat at viverra. In ac urna eget lacus tempor facilisis laoreet ut purus. Fusce pulvinar mattis lobortis. Ut vitae purus tortor. Duis odio velit, vestibulum eu luctus at, congue eu quam. Nam quam metus, imperdiet tincidunt hendrerit non, accumsan pretium enim. </p>
+			</div>
+			<div class = "span4">
+				<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
+			</div>
+			<div class = "span4">
+				<p>Nulla mauris felis, malesuada quis semper eget, posuere non ante. Vivamus eleifend blandit mauris, eu accumsan ipsum aliquet id. Nam  	tristique laoreet nulla vitae rhoncus. Nulla semper, orci sed euismod ullamcorper, lacus lectus tempor est, quis ullamcorper sem justo id enim. Maecenas tristique, dolor interdum dignissim tincidunt, nisi sem mattis lacus, congue venenatis risus lorem et nisi. Curabitur velit leo, consequat in posuere at, rhoncus sed erat. Sed mattis neque eu libero dapibus ut semper sem posuere. Praesent fermentum adipiscing nulla nec commodo. Vivamus et libero erat, sit amet pretium lacus. Nunc semper sollicitudin vulputate. Suspendisse potenti. Quisque quis urna dolor. Curabitur sit amet lorem eget diam mattis consequat. Quisque gravida, arcu et suscipit sodales, erat est vulputate mi, nec sodales tortor erat at sem. Maecenas sit amet porta leo. Vestibulum vel quam odio.</p>
+			</div>
+			<div class = "span4">
+				<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
+			</div>
+		</div>
+
 	</body>
 </html>
