--- a/index.html
+++ b/index.html
@@ -5,24 +5,44 @@
 		<title>Einstein Express</title>
 	</head>
 	<body>
-		<div class="row" style="float:center;">
-			<div class = "span4">
-				<h1>Einstein Express</h1>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin tortor velit, ut egestas nisl. Aenean gravida bibendum erat at viverra. In ac urna eget lacus tempor facilisis laoreet ut purus. Fusce pulvinar mattis lobortis. Ut vitae purus tortor. Duis odio velit, vestibulum eu luctus at, congue eu quam. Nam quam metus, imperdiet tincidunt hendrerit non, accumsan pretium enim. Nulla mauris felis, malesuada quis semper eget, posuere non ante. Vivamus eleifend blandit mauris, eu accumsan ipsum aliquet id. Nam  	tristique laoreet nulla vitae rhoncus. Nulla semper, orci sed euismod ullamcorper, lacus lectus tempor est, quis ullamcorper sem justo id enim. Maecenas tristique, dolor interdum dignissim tincidunt, nisi sem mattis lacus, congue venenatis risus lorem et nisi. Curabitur velit leo, consequat in posuere at, rhoncus sed erat. </p>
-			</div>
-			<div class = "span4">
-				<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
-				<h1>When it absolutely, positively has to be there the day before yesterday.</h1>
-			</div>
-			<div class = "span4">
-				<p> Sed mattis neque eu libero dapibus ut semper sem posuere. Praesent fermentum adipiscing nulla nec commodo. Vivamus et libero erat, sit amet pretium lacus. Nunc semper sollicitudin vulputate. Suspendisse potenti. Quisque quis urna dolor. Curabitur sit amet lorem eget diam mattis consequat. Quisque gravida, arcu et suscipit sodales, erat est vulputate mi, nec sodales tortor erat at sem. Maecenas sit amet porta leo. Vestibulum vel quam odio.</p>
-				<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
-			</div>
-			<div class = "span4">
-				<img src = "img/time_machine_1.png" height = "150px" width = "180px"/>
-				<p>Our patented superconductor matrix, coupled with Einstein's theory of the space/time continuum will transport any document or package up to 10 pounds <strong> in to the past!</strong></p>
+		<div class="topbar">
+			<div class="fill">
+			<div class="container">
+				<h3><a href="#">Einstein Express</a></h3>
+				<ul>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">Pricing</a></li>
+					<li><a href="#">Testimonials</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+				<form action="" style="float:right;">
+					<input type="text" placeholder="Search" />
+				</form>
 			</div>
 		</div>
+	</div>
+		<div class = "container" style="padding-top: 50px;">
+			<div class="row">
 
+			</div>
+			<div class="row">
+				<div class = "span4">
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin tortor velit, ut egestas nisl. Aenean gravida bibendum erat at viverra. In ac urna eget lacus tempor facilisis laoreet ut purus. Fusce pulvinar mattis lobortis. Ut vitae purus tortor. Duis odio velit, vestibulum eu luctus at, congue eu quam. Nam quam metus, imperdiet tincidunt hendrerit non, accumsan pretium enim. Nulla mauris felis, malesuada quis semper eget, posuere non ante. Vivamus eleifend blandit mauris, eu accumsan ipsum aliquet id. Nam  	tristique laoreet nulla vitae rhoncus. Nulla semper, orci sed euismod ullamcorper, lacus lectus tempor est, quis ullamcorper sem justo id enim. Maecenas tristique, dolor interdum dignissim tincidunt, nisi sem mattis lacus, congue venenatis risus lorem et nisi. Curabitur velit leo, consequat in posuere at, rhoncus sed erat. </p>
+				</div>
+				<div class = "span4">
+					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
+					<h1>When it absolutely, positively has to be there the day before yesterday.</h1>
+				</div>
+				<div class = "span4">
+					<p> Sed mattis neque eu libero dapibus ut semper sem posuere. Praesent fermentum adipiscing nulla nec commodo. Vivamus et libero erat, sit amet pretium lacus. Nunc semper sollicitudin vulputate. Suspendisse potenti. Quisque quis urna dolor. Curabitur sit amet lorem eget diam mattis consequat. Quisque gravida, arcu et suscipit sodales, erat est vulputate mi, nec sodales tortor erat at sem. Maecenas sit amet porta leo. Vestibulum vel quam odio.</p>
+					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
+				</div>
+				<div class = "span4">
+					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit.</p>
+					<img src = "img/time_machine_1.png" height = "150px" width = "210px"/>
+					<p style="font-style:italic">Our patented superconductor matrix, coupled with Einstein's theory of the space/time continuum will transport any document or package up to 10 pounds <strong> in to the past!</strong></p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
