added some images and an image row

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 				<form action="" style="float:right;">
-					<input type="text" placeholder="Search" />
+						<div class="input">
+							<input type="text" placeholder="search"/>
+						</div>
 				</form>
 			</div>
 		</div>
@@ -42,6 +44,30 @@
 					<img src = "img/time_machine_1.png" height = "150px" width = "210px"/>
 					<p style="font-style:italic">Our patented superconductor matrix, coupled with Einstein's theory of the space/time continuum will transport any document or package up to 10 pounds <strong> in to the past!</strong></p>
 				</div>
+			</div>
+			<div class="row">
+				
+					<div class="span4">
+						<a href="#" class="thumbnail">
+						<img src="img/EE_logo.png" alt="">
+						</a>
+					</div>
+					<div class="span4">
+						<a href="#" class="thumbnail">
+						<img src="img/EE_logo.png" alt="">
+						</a>
+					</div>
+					<div class="span4">
+						<a href="#" class="thumbnail">
+						<img src="img/EE_logo.png" alt="">
+						</a>
+					</div>
+					<div class="span4">
+						<a href="#" class="thumbnail">
+						<img src="img/EE_logo.png" alt="">
+						</a>
+					</div>
+				
 			</div>
 		</div>
 	</body>
