fixed the image row and added large image but cant figure out how to center it

--- a/index.html
+++ b/index.html
@@ -41,33 +41,28 @@
 				</div>
 				<div class = "span4">
 					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit.</p>
-					<img src = "img/time_machine_1.png" height = "150px" width = "210px"/>
-					<p style="font-style:italic">Our patented superconductor matrix, coupled with Einstein's theory of the space/time continuum will transport any document or package up to 10 pounds <strong> in to the past!</strong></p>
+					<img src = "img/time_machine_1.png" height="150px" width="210px"/>
+					<p style="font-style:italic">Our patented superconductor matrix, coupled with Einstein's theory of the space/time continuum will transport any document or package up to 10 pounds <strong>in to the past!</strong></p>
 				</div>
 			</div>
 			<div class="row">
-				
 					<div class="span4">
-						<a href="#" class="thumbnail">
-						<img src="img/EE_logo.png" alt="">
-						</a>
+						<img src="img/EE_logo.png" alt="" height="150px" width="210px" />
 					</div>
 					<div class="span4">
-						<a href="#" class="thumbnail">
-						<img src="img/EE_logo.png" alt="">
-						</a>
+						<img src="img/EE_logo.png" alt="" height="150px" width="210px" />
 					</div>
 					<div class="span4">
-						<a href="#" class="thumbnail">
-						<img src="img/EE_logo.png" alt="">
-						</a>
+						<img src="img/EE_logo.png" alt="" height="150px" width="210px" />
 					</div>
 					<div class="span4">
-						<a href="#" class="thumbnail">
-						<img src="img/EE_logo.png" alt="">
-						</a>
+						<img src="img/EE_logo.png" alt="" height="150px" width="210px" />
 					</div>
-				
+			</div>
+			<div class="row">
+				<div class="span12">
+					<p><img src="img/pills.png" alt="" height="auto" width="auto" style="margin-left:auto; margin-right:auto;"/></p>
+				</div>
 			</div>
 		</div>
 	</body>
