added image caption and framework for modal

--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
 			<div class="row">
 				<div class="span12">
 					<p><img src="img/pills.png" alt="" height="auto" width="auto" style="margin-left:auto; margin-right:auto;"/></p>
+					<p style="font-style:italic">I need to get these pills to my girlfirend...3 months ago!</p>
 				</div>
+			</div>
+		</div>
+		<div class="modal" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1">
+			<div class="modal-header">
+				<h3>Lorem ipsum</h3>
+				<a href="#" class="close">&amp;times;</a>
+			</div>
+			<div class="modal-body">
+				<p>Lorem ipsum dolor sit amet</p>
+			</div>
+			<div class="modal-footer">
+				<a href="#" class="btn primary">Lorem ipsum dolor</a>
+				<a href="#" class="btn">Sit Amet</a>
 			</div>
 		</div>
 	</body>
