added pricing page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<h3><a href="#">Einstein Express</a></h3>
 				<ul>
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">Pricing</a></li>
+					<li><a href="pricing.html">Pricing</a></li>
 					<li><a href="#">Testimonials</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
@@ -30,7 +30,8 @@
 			</div>
 			<div class="row">
 				<div class = "span4">
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sollicitudin tortor velit, ut egestas nisl. Aenean gravida bibendum erat at viverra. In ac urna eget lacus tempor facilisis laoreet ut purus. Fusce pulvinar mattis lobortis. Ut vitae purus tortor. Duis odio velit, vestibulum eu luctus at, congue eu quam. Nam quam metus, imperdiet tincidunt hendrerit non, accumsan pretium enim. Nulla mauris felis, malesuada quis semper eget, posuere non ante. Vivamus eleifend blandit mauris, eu accumsan ipsum aliquet id. Nam  	tristique laoreet nulla vitae rhoncus. Nulla semper, orci sed euismod ullamcorper, lacus lectus tempor est, quis ullamcorper sem justo id enim. Maecenas tristique, dolor interdum dignissim tincidunt, nisi sem mattis lacus, congue venenatis risus lorem et nisi. Curabitur velit leo, consequat in posuere at, rhoncus sed erat. </p>
+					<p><a data-toggle="modal" href="#myModal" class="btn btn-primary btn-large">Here is a button!</a></p>
+					<p>Aenean gravida bibendum erat at viverra. In ac urna eget lacus tempor facilisis laoreet ut purus. Fusce pulvinar mattis lobortis. Ut vitae purus tortor. Duis odio velit, vestibulum eu luctus at, congue eu quam. Nam quam metus, imperdiet tincidunt hendrerit non, accumsan pretium enim. Nulla mauris felis, malesuada quis semper eget, posuere non ante. Vivamus eleifend blandit mauris, eu accumsan ipsum aliquet id. Nam  	tristique laoreet nulla vitae rhoncus. Nulla semper, orci sed euismod ullamcorper, lacus lectus tempor est, quis ullamcorper sem justo id enim. Maecenas tristique, dolor interdum dignissim tincidunt, nisi sem mattis lacus, congue venenatis risus lorem et nisi. Curabitur velit leo, consequat in posuere at, rhoncus sed erat. Aenean gravida bibendum erat at viverra. In ac urna eget lacus tempor facilisis laoreet ut purus.</p>
 				</div>
 				<div class = "span4">
 					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit malesuada odio vulputate tempus.</p>
@@ -61,10 +62,10 @@
 						<img src="img/EE_logo.png" alt="" height="150px" width="210px" />
 					</div>
 			</div>
-			<div class="row">
-				<div class="span12">
-					<p><img src="img/pills.png" alt="" height="auto" width="auto" style="margin-left:auto; margin-right:auto;"/></p>
-					<p style="font-style:italic">I need to get these pills to my girlfirend...3 months ago!</p>
+			<div class="row" style="padding-top: 15px;">
+				<div class="span12" >
+					<p align="center"><img src="img/pills.png" alt="" height="auto" width="auto" /></p>
+					<p align="center" style="font-style:italic">I need to get these pills to my girlfirend...3 months ago!</p>
 				</div>
 			</div>
 		</div>
