fixed second row of images

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
 					</div>
 			</div>
 			<div class="row" style="padding-top: 15px;">
-				<div class="span12" >
-					<p align="center"><img src="img/pills.png" alt="" height="auto" width="auto" /></p>
+				<div class="span8" >
+					<p align="center"><img src="img/pills.png" alt="" height="340px" width="450px" /></p>
 					<p align="center" style="font-style:italic">I need to get these pills to my girlfirend...3 months ago!</p>
+				</div>
+				<div class="span8" >
+					<p align="center"><img src="img/logo_desk.png" alt="" height="340px" width="450px" /></p>
+					<p align="center" style="font-style:italic">I got that report in on time and kept my job!</p>
 				</div>
 			</div>
 		</div>
