modal sorta working

--- a/index.html
+++ b/index.html
@@ -2,10 +2,36 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-		<script type="text/javascript" src="lib/bootstrap-modal.js"></script>
+		<meta charset="utf-8">
+		<title>Modal Example</title>
+		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">    
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+		<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-modal.js"></script>
+		<script>
+			$(document).ready(function() {
+				$("#modal-from-dom").bind('show', function() {
+				var name = $("#name").val();
+				$("#name_header").text("Hello, " + name);
+				});
+			});
+		</script>
 		<title>Einstein Express</title>
 	</head>
 	<body>
+		<div id="modal-from-dom" class="modal hide fade" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1">
+			<div class="modal-header">
+				<h3>Lorem ipsum</h3>
+				<a href="#" class="close">&amp;times;</a>
+			</div>
+			<div class="modal-body">
+				<p>Lorem ipsum dolor sit amet</p>
+			</div>
+			<div class="modal-footer">
+				<a href="#" class="btn primary">Lorem ipsum dolor</a>
+				<a href="#" class="btn">Sit Amet</a>
+			</div>
+		</div>
+
 		<div class="topbar">
 			<div class="fill">
 			<div class="container">
@@ -40,7 +66,10 @@
 				<div class = "span4">
 					<p> Sed mattis neque eu libero dapibus ut semper sem posuere. Praesent fermentum adipiscing nulla nec commodo. Vivamus et libero erat, sit amet pretium lacus. Nunc semper sollicitudin vulputate. Suspendisse potenti. Quisque quis urna dolor. Curabitur sit amet lorem eget diam mattis consequat. Quisque gravida, arcu et suscipit sodales, erat est vulputate mi, nec sodales tortor erat at sem. Maecenas sit amet porta leo. Vestibulum vel quam odio.</p>
 					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo. </p>
-					<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-large">See an Awesome Modal!</a>
+					<button data-controls-modal="modal-from-dom"
+						data-backdrop="true"
+						data-keyboard="true"
+						class="btn danger">Launch Modal</button>
 				</div>
 				<div class = "span4">
 					<p>Suspendisse potenti. Maecenas facilisis eleifend erat in gravida. Aliquam dui neque, scelerisque nec consectetur ut, vulputate ut quam. Suspendisse potenti. Cras iaculis rhoncus dolor eu tincidunt. Etiam semper, quam id auctor commodo, purus velit rutrum massa, vitae auctor quam mi eu sapien. Mauris lacinia nibh ut leo sodales accumsan. Sed porta mauris ut tellus convallis commodo. Vivamus varius elit.</p>
@@ -71,19 +100,6 @@
 					<p align="center"><img src="img/logo_desk.png" alt="" height="340px" width="450px" /></p>
 					<p align="center" style="font-style:italic">I got that report in on time and kept my job!</p>
 				</div>
-			</div>
-		</div>
-		<div id="myModal" class="modal hide fade" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1">
-			<div class="modal-header">
-				<h3>Lorem ipsum</h3>
-				<a href="#" class="close">&amp;times;</a>
-			</div>
-			<div class="modal-body">
-				<p>Lorem ipsum dolor sit amet</p>
-			</div>
-			<div class="modal-footer">
-				<a href="#" class="btn primary">Lorem ipsum dolor</a>
-				<a href="#" class="btn">Sit Amet</a>
 			</div>
 		</div>
 	</body>
