modal actually working

--- a/index.html
+++ b/index.html
@@ -18,38 +18,38 @@
 		<title>Einstein Express</title>
 	</head>
 	<body>
-		<div id="modal-from-dom" class="modal hide fade" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1">
-			<div class="modal-header">
-				<h3>Lorem ipsum</h3>
-				<a href="#" class="close">&amp;times;</a>
-			</div>
-			<div class="modal-body">
-				<p>Lorem ipsum dolor sit amet</p>
-			</div>
-			<div class="modal-footer">
-				<a href="#" class="btn primary">Lorem ipsum dolor</a>
-				<a href="#" class="btn">Sit Amet</a>
-			</div>
+    <div id="modal-from-dom" class="modal hide fade">
+		<div class="modal-header">
+			<a href="#" class="close">&times;</a>
+			<h3 id="name_header"></h3>
 		</div>
+		<div class="modal-body">
+			<p>One fine body…</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#" class="btn primary">Primary</a>
+			<a href="#" class="btn secondary">Secondary</a>
+		</div>
+    </div>
 
 		<div class="topbar">
 			<div class="fill">
-			<div class="container">
-				<h3><a href="#">Einstein Express</a></h3>
-				<ul>
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="pricing.html">Pricing</a></li>
-					<li><a href="#">Testimonials</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-				<form action="" style="float:right;">
+				<div class="container">
+					<h3><a href="#">Einstein Express</a></h3>
+					<ul>
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="pricing.html">Pricing</a></li>
+						<li><a href="#">Testimonials</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+					<form action="" style="float:right;">
 						<div class="input">
 							<input type="text" placeholder="search"/>
 						</div>
-				</form>
+					</form>
+				</div>
 			</div>
 		</div>
-	</div>
 		<div class = "container" style="padding-top: 50px;">
 			<div class="row">
 
