--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			$(document).ready(function() {
 				$("#modal-from-dom").bind('show', function() {
 				var name = $("#name").val();
-				$("#name_header").text("Hello, " + name);
+				$("#name_header").text("This modal is soo cool i can't even stand it.");
 				});
 			});
 		</script>
@@ -24,11 +24,11 @@
 			<h3 id="name_header"></h3>
 		</div>
 		<div class="modal-body">
-			<p>One fine body…</p>
+			<p>One fine body</p>
 		</div>
 		<div class="modal-footer">
-			<a href="#" class="btn primary">Primary</a>
-			<a href="#" class="btn secondary">Secondary</a>
+			<a href="#" class="btn primary">Click Me!</a>
+			<a href="#" class="btn secondary">No, Click ME!</a>
 		</div>
     </div>
 
